--- a/html/creator.html
+++ b/html/creator.html
@@ -394,17 +394,16 @@
 
                   <div class="grid md:grid-cols-4 md:max-w-2xl  md:mb-5 md:grid-flow-col col-span-2">
                     <div class="relative mt-4 col-start-1 col-span-2 justify-center sm:grid-flow-row">
-                      <div class="relative"><img class="h-72 object-cover aspect-square" id="mostPopularCover"
-                          src=""
-                          alt="Most popular work"></div>
+                      <div class="relative"><img class="h-72 object-cover aspect-square shadow-lg" id="mostPopularCover"
+                          src="" alt="Most popular work"></div>
                       <p class="absolute top-0 left-0 text-5xl m-4 text-white bg-black rounded-md p-1 px-2 ">1</p>
-                      <div class="text-gray-400 text-sm "><a id="mostPopularGenre1"></a><span
-                          class="mx-1">,</span><a id="mostPopularGenre2"></a></div>
+                      <div class="text-gray-400 text-sm "><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a
+                          id="mostPopularGenre2"></a></div>
                     </div>
                     <div class="flex flex-col col-span-2  ">
                       <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
-                      <!-- <a class="font-bold text-gray-500 text-base dark:text-gray-300"
-                        id="mostPopularCreatorUsername">GG</a> -->
+                      <a class="font-bold text-gray-500 text-base dark:text-gray-300"
+                        id="mostPopularCreatorUsername"></a>
                       <div class="text-gray-600 text-left mt-6" id="mostPopularSummary"></div>
 
                     </div>
@@ -604,9 +603,10 @@
                                     <div class="flex-1 px-2">
                                       <button x-text="i" x-on:click="image = i"
                                         :class="{ 'ring-2 ring-indigo-300 ring-inset': image === i }"
-                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center" src="" />
-                                        <span class="text-2xl"></span>
-                                    </button>
+                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center"
+                                        src="" />
+                                      <span class="text-2xl"></span>
+                                      </button>
                                     </div>
                                   </template>
                                 </div>
