--- a/html/creator.html
+++ b/html/creator.html
@@ -288,16 +288,23 @@
                                       </div>
                                     </div>
                                   </div>
+                                  <div class="flex justify-center mt-6">
+                                    <button id="btnSendRequest" onclick="" type="button"
+                                      class="px-3 py-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-cyan-500 rounded-md dark:bg-cyan-600 dark:hover:bg-cyan-700 dark:focus:bg-cyan-700 hover:bg-cyan-600 focus:outline-none focus:bg-cyan-500 focus:ring focus:ring-cyan-300 focus:ring-opacity-50">
+                                      
+                                      Clear
+                                    </button>
+                                  </div>
                                   <form class="mt-5">
                                     <div>
-                                      <label for="user name" id="shortMessageHeading" class="block text-sm text-gray-700 capitalize ">Short
-                                        Message (70 characters left)</label>
+                                      <label for="user name" id="shortMessageHeading" class="block text-sm text-gray-700 capitalize ">
+                                        <span class="font-bold">Short Message</span> <span class="text-gray-400" >(70 characters left)</span></label> 
                                       <input oninput="updateCharCount(event)" id="shortMessage" placeholder="Hey! I am example and would love you to..." type="text"
                                         class="block w-full px-3 py-2 mt-2 text-gray-600  bg-white border border-gray-200 rounded-md focus:border-indigo-400 focus:outline-none focus:ring focus:ring-indigo-300 focus:ring-opacity-40">
                                     </div>
 
                                     <div class="mt-4">
-                                      <h1 class="text-xs font-medium text-gray-400 uppercase">Important!</h1>
+                                      <h1 class="text-xs font-medium text-gray-400 uppercase p-2">Sending this request will share any intellectual property rights you have for the adaptation of the selected series with this creator</h1>
 
                                       <div class="mt-4 space-y-5">
                                         <!-- <div class="flex items-center space-x-3 cursor-pointer" x-data="{ show: true }"
@@ -312,7 +319,7 @@
                                               class="hidden w-full h-full rounded-full appearance-none active:outline-none focus:outline-none" />
                                           </div> -->
 
-                                          <p class="text-gray-500">Sending this request will share any intellectual property rights you have for the adaptation of the selected series with this creator</p>
+                                          <p class="text-gray-500"></p>
                                         <!-- </div> -->
                                       </div>
                                     </div>
