--- a/html/creator.html
+++ b/html/creator.html
@@ -289,7 +289,7 @@
                                     </div>
                                   </div>
                                   <div class="flex justify-center mt-6">
-                                    <button id="btnSendRequest" onclick="" type="button"
+                                    <button id="btnClearSelection" onclick="" type="button"
                                       class="px-3 py-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-cyan-500 rounded-md dark:bg-cyan-600 dark:hover:bg-cyan-700 dark:focus:bg-cyan-700 hover:bg-cyan-600 focus:outline-none focus:bg-cyan-500 focus:ring focus:ring-cyan-300 focus:ring-opacity-50">
                                       
                                       Clear
