i think i fixed adaptation request

--- a/html/account.html
+++ b/html/account.html
@@ -607,7 +607,7 @@
                                       <input id="pNumber" type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" />
                                   </div>
                               </div>
-                              <div class="mt-4">
+                              <!-- <div class="mt-4">
                                   <div class="py-4 flex items-center">
                                       <div class="bg-white dark:bg-gray-800 border rounded-sm border-gray-400 dark:border-gray-700 w-4 h-4 flex flex-shrink-0 justify-center items-center relative">
                                           <input aria-labelledby="agree"  checked type="checkbox" class="focus:outline-none focus:ring-2 focus:ring-gray-700 checkbox focus:opacity-100 opacity-0 absolute cursor-pointer w-full h-full" />
@@ -617,7 +617,7 @@
                                       </div>
                                       <p id="agree" tabindex="0" class="focus:outline-none text-sm leading-none ml-2 dark:text-gray-400">I agree with the <span class="text-indigo-400">terms of service</span></p>
                                   </div>
-                              </div>
+                              </div> -->
                               <button onclick="saveDetails()" role="button" class=" top-5 flex items-center mt-5 justify-center py-4 px-7 focus:outline-none bg-white border rounded border-gray-400 md:mt-5 hover:bg-gray-100  focus:ring-2 focus:ring-offset-2 focus:ring-gray-700">
                                   <span class="text-sm font-medium text-center text-gray-800 capitalize">Save</span>  
                                 </button>
