--- a/html/home.html
+++ b/html/home.html
@@ -139,36 +139,31 @@
       <div class="w-full mx-auto pt-4 p-4 pb-0">
         <div id="indicators-carousel" class="relative" data-carousel="Slide">
           <!-- Carousel wrapper -->
-          <div class="overflow-hidden relative h-48 rounded-lg sm:h-64 xl:h-96 2xl:h-96">
-               <!-- Item 1 -->
-              <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapers.net%2Fweb%2Fwallpapers%2Fanime-sunset-hd-wallpaper%2F5120x2160.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+          <div id="adsContainer" class="overflow-hidden relative h-48 rounded-lg sm:h-64 xl:h-96 2xl:h-96">
+              <!-- <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+                  <img id="ad0" onclick="adRedirect(0)" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapers.net%2Fweb%2Fwallpapers%2Fanime-sunset-hd-wallpaper%2F5120x2160.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
               </div>
-              <!-- Item 2 -->
               <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.pixelstalk.net%2Fwp-content%2Fuploads%2F2016%2F01%2FBeauty-Anime-HD-Wallpapers.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+                  <img id="ad1" onclick="adRedirect(0)" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.pixelstalk.net%2Fwp-content%2Fuploads%2F2016%2F01%2FBeauty-Anime-HD-Wallpapers.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
               </div>
-              <!-- Item 3 -->
               <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F324051.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+                  <img id="ad2" onclick="adRedirect(0)" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F324051.jpg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
               </div>
-              <!-- Item 4 -->
               <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                  <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.wallpapers.net%2Fanime-school-girl-hd-wallpaper%2Fdownload%2F5120x2160.jpeg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+                  <img id="ad3" onclick="adRedirect(0)" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.wallpapers.net%2Fanime-school-girl-hd-wallpaper%2Fdownload%2F5120x2160.jpeg&f=1&nofb=1" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
               </div>
-              <!-- Item 5 -->
               <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                  <img src="/docs/images/carousel/carousel-5.svg" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
-              </div>
+                  <img id="ad4" onclick="adRedirect(0)" src="/docs/images/carousel/carousel-5.svg" class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              </div> -->
           </div>
           <!-- Slider indicators -->
-          <div class="flex absolute bottom-5 left-1/2 z-50 space-x-3 -translate-x-1/2">
+          <!-- <div class="flex absolute bottom-5 left-1/2 z-50 space-x-3 -translate-x-1/2">
               <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
               <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
               <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
               <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
               <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-          </div>
+          </div> -->
           <!-- Slider controls -->
           <button type="button" class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none" data-carousel-prev>
               <span class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
