--- a/html/creator.html
+++ b/html/creator.html
@@ -577,28 +577,28 @@
                               <div x-data="{ image: 1 }" x-cloak>
                                 <div class="h-64 md:h-80 rounded-lg mb-4">
                                   <div x-show="image === 1"
-                                    class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
+                                    class="h-64 md:h-80 rounded-lg  mb-4 flex items-center justify-center">
                                     <!-- <span class="text-5xl">1</span> -->
                                     <img id="artSample1" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
 
                                   <div x-show="image === 2"
-                                    class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
+                                    class="h-64 md:h-80 rounded-lg  mb-4 flex items-center justify-center">
                                     <img id="artSample2" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
 
                                   <div x-show="image === 3"
-                                    class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
+                                    class="h-64 md:h-80 rounded-lg  mb-4 flex items-center justify-center">
                                     <img id="artSample3" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
 
                                   <div x-show="image === 4"
-                                    class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
+                                    class="h-64 md:h-80 rounded-lg  mb-4 flex items-center justify-center">
                                     <img id="artSample4" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
 
                                   <div x-show="image === 5"
-                                    class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
+                                    class="h-64 md:h-80 rounded-lg mb-4 flex items-center justify-center">
                                     <img id="artSample5" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
                                 </div>
