--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -450,19 +450,124 @@
                       Lorem ipsum dolor sit amet pretium consectetur adipiscing
                       elit. Lorem consectetur adipiscing elit.
                     </p>
-                    <a href="javascript:void(0)" class="
-                    inline-block
-                    py-2
-                    px-7
-                    border border-[#E5E7EB]
-                    rounded-full
-                    text-base text-body-color
-                    font-medium
-                    hover:border-primary hover:bg-primary hover:text-white
-                    transition capitalize
-                    ">
-                      enter
-                    </a>
+                    <div x-data="{ modelOpen: false }">
+                      <button @click="modelOpen =!modelOpen" class="inline-block
+                        py-2
+                        px-7
+                        border border-[#E5E7EB]
+                        rounded-full
+                        text-base text-body-color
+                        font-medium
+                        hover:border-primary hover:bg-primary hover:text-white
+                        transition capitalize">
+
+                        <span>Enter</span>
+                      </button>
+
+                      <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto" aria-labelledby="modal-title"
+                        role="dialog" aria-modal="true">
+                        <div
+                          class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
+                          <div x-cloak @click="modelOpen = false" x-show="modelOpen"
+                            x-transition:enter="transition ease-out duration-300 transform"
+                            x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                            x-transition:leave="transition ease-in duration-200 transform"
+                            x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0"
+                            class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-40" aria-hidden="true">
+                          </div>
+
+                          <div x-cloak x-show="modelOpen"
+                            x-transition:enter="transition ease-out duration-300 transform"
+                            x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                            x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                            x-transition:leave="transition ease-in duration-200 transform"
+                            x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                            x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                            class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-gray-50 rounded-lg shadow-xl 2xl:max-w-2xl">
+                            <div class="flex items-center justify-between space-x-4">
+                              <h1 class="text-xl font-medium text-gray-800 ">Make a New Feed</h1>
+
+                              <button @click="modelOpen = false"
+                                class="text-gray-600 focus:outline-none hover:text-gray-700">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
+                                  stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                              </button>
+                            </div>
+
+
+
+                            <p class="mt-2 text-sm text-gray-500 ">
+                              Feeds help you to communicate to <span id="adaptee"
+                                class="font-bold text-blue-600"></span> increase engagement with audience.
+                            </p>
+
+                            <div class="flex flex-col mt-4">
+                              <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+                              <div class="relative max-w-sm mx-auto text-xs">
+                              </div>
+
+                              <form>
+                                <div
+                                  class="mb-4 w-full bg-gray-50 rounded-lg border border-gray-200 dark:bg-gray-700 dark:border-gray-600">
+                                  <div class="py-2 px-4 bg-white rounded-t-lg dark:bg-gray-800">
+                                    <label for="comment" class="sr-only">Your comment</label>
+                                    <textarea id="comment" rows="4"
+                                      class="px-0 w-full text-sm text-gray-900 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400"
+                                      placeholder="Write a comment..." required=""></textarea>
+                                  </div>
+                                  <div
+                                    class="flex justify-between items-center py-2 px-3 border-t dark:border-gray-600">
+                                    <button type="submit"
+                                      class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800">
+                                      Post comment
+                                    </button>
+                                    <div class="flex pl-0 space-x-1 sm:pl-2">
+                                      <button type="button"
+                                        class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd"
+                                            d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z"
+                                            clip-rule="evenodd"></path>
+                                        </svg>
+                                      </button>
+                                      <button type="button"
+                                        class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd"
+                                            d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                                            clip-rule="evenodd"></path>
+                                        </svg>
+                                      </button>
+                                      <button type="button"
+                                        class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+                                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd"
+                                            d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
+                                            clip-rule="evenodd"></path>
+                                        </svg>
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </form>
+                              <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">Remember, contributions to
+                                this topic should follow our <a href="#"
+                                  class="text-blue-600 dark:text-blue-500 hover:underline">Community Guidelines</a>.</p>
+
+                            </div>
+
+
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
