--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -415,7 +415,7 @@
           </ul>
         </div>
       </header>
-      <main class="p-2">
+      <main class="">
         <div class="xl:w-full border-b border-gray-300 dark:border-gray-700 py-5 bg-white dark:bg-gray-800">
           <div class="flex w-11/12 mx-auto xl:w-full xl:mx-0 items-center ">
             <h1 tabindex="0" role="heading" aria-label="profile information"
