tells that series is mature, shows adaptation, and hides prev/next chap option if unavailable

--- a/html/readComic.html
+++ b/html/readComic.html
@@ -33,11 +33,11 @@
 					YUME
 				</a>
 			</div>
-			<div class="">
+			<!-- <div class="">
 				<a class="text-gray-100 text-base no-underline hover:no-underline font-extrabold" href="/">
 					Solo Leveling
 				</a>
-			</div>
+			</div> -->
 			<div class="block lg:hidden pr-4">
 				<button id="nav-toggle"
 					class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-green-500 appearance-none focus:outline-none">
@@ -210,13 +210,13 @@
 		<!--Next & Prev Links-->
 		<div class="font-sans flex justify-between content-center px-4 pb-12">
 			<div class="text-left">
-				<span class="text-xs md:text-sm font-bold text-gray-100"> Previous Chapter</span><br>
+				<span id="prevChapHeading" class="text-xs md:text-sm font-bold text-gray-100"> Previous Chapter</span><br>
 				<p><a id="prevChap"
 						class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a>
 				</p>
 			</div>
 			<div class="text-right">
-				<span class="text-xs md:text-sm font-bold text-gray-100">Next Chapter </span><br>
+				<span id="nextChapHeading" class="text-xs md:text-sm font-bold text-gray-100">Next Chapter </span><br>
 				<p><a id="nextChap"
 						class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a>
 				</p>
