--- a/html/creator.html
+++ b/html/creator.html
@@ -596,12 +596,12 @@
                                 <div class="flex -mx-2 mb-4">
                                   <template id="templateStep" x-for="i in 5">
                                     <div class="flex-1 px-2">
-                                      <button x-text="i" x-on:click="image = i"
+                                      <img x-text="i" x-on:click="image = i"
                                         :class="{ 'ring-2 ring-indigo-300 ring-inset': image === i }"
-                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center"
+                                        class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center sampleArtImgPrev"
                                         src="" />
                                       <span class="text-2xl"></span>
-                                      </button>
+                                      <!-- </button> -->
                                     </div>
                                   </template>
                                 </div>
