--- a/html/creator.html
+++ b/html/creator.html
@@ -291,25 +291,30 @@
                                   <div class="flex justify-center mt-6">
                                     <button id="btnClearSelection" onclick="" type="button"
                                       class="px-3 py-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-cyan-500 rounded-md dark:bg-cyan-600 dark:hover:bg-cyan-700 dark:focus:bg-cyan-700 hover:bg-cyan-600 focus:outline-none focus:bg-cyan-500 focus:ring focus:ring-cyan-300 focus:ring-opacity-50">
-                                      
+
                                       Clear
                                     </button>
                                   </div>
                                   <form class="mt-5">
                                     <div>
-                                      <label for="user name" id="shortMessageHeading" class="block text-sm text-gray-700 capitalize ">
-                                        <span class="font-bold">Short Message</span> <span class="text-gray-400" >(70 characters left)</span></label> 
-                                      <input oninput="updateCharCount(event)" id="shortMessage" placeholder="Hey! I am example and would love you to..." type="text"
+                                      <label for="user name" id="shortMessageHeading"
+                                        class="block text-sm text-gray-700 capitalize ">
+                                        <span class="font-bold">Short Message</span> <span class="text-gray-400">(70
+                                          characters left)</span></label>
+                                      <input oninput="updateCharCount(event)" id="shortMessage"
+                                        placeholder="Hey! I am example and would love you to..." type="text"
                                         class="block w-full px-3 py-2 mt-2 text-gray-600  bg-white border border-gray-200 rounded-md focus:border-indigo-400 focus:outline-none focus:ring focus:ring-indigo-300 focus:ring-opacity-40">
                                     </div>
 
                                     <div class="mt-4">
-                                      <h1 class="text-xs font-medium text-gray-400 uppercase p-2">Sending this request will share any intellectual property rights you have for the adaptation of the selected series with this creator</h1>
+                                      <h1 class="text-xs font-medium text-gray-400 uppercase p-2">Sending this request
+                                        will share any intellectual property rights you have for the adaptation of the
+                                        selected series with this creator</h1>
 
                                       <div class="mt-4 space-y-5">
                                         <!-- <div class="flex items-center space-x-3 cursor-pointer" x-data="{ show: true }"
                                           @click="show =!show"> -->
-                                          <!-- <div
+                                        <!-- <div
                                             class="relative w-10 h-5 transition duration-200 ease-linear rounded-full"
                                             :class="[show ? 'bg-indigo-500' : 'bg-gray-300']">
                                             <label for="show" @click="show =!show"
@@ -319,7 +324,7 @@
                                               class="hidden w-full h-full rounded-full appearance-none active:outline-none focus:outline-none" />
                                           </div> -->
 
-                                          <p class="text-gray-500"></p>
+                                        <p class="text-gray-500"></p>
                                         <!-- </div> -->
                                       </div>
                                     </div>
@@ -419,10 +424,10 @@
                     <div id="feedContainer">
                       <!-- <div class="flex justify-center">
                         <div class="min-w-full">
-                          <div class="block rounded-lg shadow-lg bg-white mt-6">
+                          <div class="block rounded-lg bg-white mt-6 shadow-md shadow-cyan-300">
                             <div class="md:flex md:flex-row">
                               <div class="md:ml-6 md:mr-6">
-                                <p class="text-gray-500 font-light mb-2 text-sm">
+                                <p class="text-gray-500 font-light mb-2 text-sm mt-2">
                                   no chapter of One Piece this week. :(
                                 </p>
                                 <p class="text-gray-500 text-xs mb-2">2/04/2022</p>
@@ -432,7 +437,7 @@
                         </div>
                       </div> -->
                     </div>
-                    
+
                   </div>
 
 
