--- a/html/home.html
+++ b/html/home.html
@@ -173,6 +173,7 @@
             <img id="ad0" onclick="adRedirect(0)"
               src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapers.net%2Fweb%2Fwallpapers%2Fanime-sunset-hd-wallpaper%2F5120x2160.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+            <h1 class="z-50 ">LOL</h1>
           </div>
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad1" onclick="adRedirect(0)"
