--- a/html/engagement.html
+++ b/html/engagement.html
@@ -392,8 +392,34 @@
               class="focus:outline-none text-3xl font-bold text-gray-800 dark:text-gray-100 ">Engagement</h1>
           </div>
         </div>
+        <div class="flex w-full items-center justify-center mt-4">
+          <button @click="" class="inline-block
+          py-2
+          px-3
+          border border-[#E5E7EB]
+          rounded-md
+          rounded-tr-none
+          text-base text-body-color
+          font-medium
+          hover:border-primary hover:bg-primary shadow-md hover:shadow-cyan-400
+          transition capitalize
+          text-white">
+
+            <span>
+              <div class="flex w-fit">
+                Go to profile
+                <svg xmlns="http://www.w3.org/2000/svg" width="2" height="16" fill="currentColor"
+                  class="bi bi-arrow-up-right-square" viewBox="0 0 14 14">
+                  <path fill-rule="evenodd"
+                    d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z" />
+                </svg>
+              </div>
+            </span>
+          </button>
+        </div>
+
         <!-- ====== Cards Section Start -->
-        <section class="pt-20 lg:pt-[120px] pb-10 lg:pb-20">
+        <section class="pt-20  pb-10 lg:pb-20">
           <div class="container">
             <div class="flex flex-wrap">
               <div class="w-full md:w-1/2 xl:w-1/3 px-4">
