coded go to profile button

--- a/html/engagement.html
+++ b/html/engagement.html
@@ -406,7 +406,7 @@
           text-white">
 
             <span>
-              <div class="flex w-fit">
+              <div id="goToProfile" class="flex w-fit">
                 Go to profile
                 <svg xmlns="http://www.w3.org/2000/svg" width="2" height="16" fill="currentColor"
                   class="bi bi-arrow-up-right-square" viewBox="0 0 14 14">
