--- a/html/account.html
+++ b/html/account.html
@@ -457,7 +457,7 @@
 
                     <div
                       class="w-20 h-20 rounded-full bg-cover bg-center bg-no-repeat absolute bottom-0 -mb-10 ml-12 shadow flex items-center justify-center">
-                      <img id="pfp" alt=""
+                      <img id="pfpImg" alt=""
                         class="absolute z-0 h-full w-full object-cover rounded-full shadow top-0 left-0 bottom-0 right-0" />
                       <div class="absolute bg-black opacity-50 top-0 right-0 bottom-0 left-0 rounded-full z-0"></div>
                       <div class="cursor-pointer flex flex-col justify-center items-center z-10 text-gray-100">
