coded genres list page

--- a/html/glist.html
+++ b/html/glist.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link href="/css/output.css" rel="stylesheet">
-    <title>Your search results</title>
+    <title>Search for genres</title>
 </head>
 <body class="dark:bg-black" >
 
@@ -111,26 +111,6 @@
       <a href="/popular" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
     </div>
   </div>
-  <script>document.getElementById('togglemebutton').onclick = function() {
-    document.getElementById("resultnav").classList.toggle("hidden");
-  }
-  
-  //document.getElementById('togglemebutton').onclick = function () {
-  //  document.getElementById("toggleme").classList.toggle("hidden");
-  //}
-  
-  
-  const toggleprofile = document.getElementById("toggleprofile");
-  const resultprofile = document.getElementById("resultprofile");
-  [...document.querySelectorAll('body')].forEach(el => {
-    el.addEventListener('click', event => {
-      if (event.target.parentElement.id !== "toggleprofile") {
-        console.log(event.target.parentElement.id)
-        resultprofile.classList.add("hidden")
-      }else{
-      resultprofile.classList.toggle("hidden")}
-    })
-  })</script>
 </nav>
 
 <!-- component -->
@@ -162,24 +142,7 @@
 
             <main class="my-8">
                   <div class="container mx-auto px-6">
-                      <div class="grid grid-cols-8 gap-3">
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-                      <a href="/genre/action" class="rounded-md text-center px-3 text-xl font-bold uppercase hover:underline cursor-pointer bg-black dark:bg-white text-white dark:text-black">action</a>
-
-                          
-                      </div>
+                      <div id="genresContainer" class="grid grid-cols-8 gap-3"></div>
                   </div>
               </main>
               <div class="my-3" id="recommendationDiv">
@@ -203,6 +166,6 @@
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
       <script src="/js/init.js" type="module"></script>
-      <script defer src="/js/search.js" type="module"></script>
+      <script defer src="/js/glist.js" type="module"></script>
 </body>
 </html>
