--- a/html/home.html
+++ b/html/home.html
@@ -351,9 +351,7 @@
                     GET IN TOUCH WITH US
                   </h2>
                   <p class="text-base text-body-color leading-relaxed mb-9">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eius tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    adiqua minim veniam quis nostrud exercitation ullamco
+                    Have a query? Fill in the form and we'll get back to you as soon as possible.
                   </p>
 
                 </div>
