--- a/html/glist.html
+++ b/html/glist.html
@@ -131,7 +131,7 @@
                 </svg>
             </span>
 
-                <input id="searchBar" class="w-full border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline" type="text" placeholder="Search for a Genre...">
+                <input id="searchBar" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"  class="w-full border rounded-md pl-10 pr-4 py-2 focus:border-blue-500 focus:outline-none focus:shadow-outline" type="text" placeholder="Search for a Genre...">
             </div>
         </div>
     </header>
