fixed library page becoz some guy decided to copy paste genre page

--- a/html/library.html
+++ b/html/library.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link href="/css/output.css" rel="stylesheet">
-  <title>Series by genre</title>
+  <title>Series you follow</title>
 </head>
 
 <body class="dark:bg-black">
@@ -135,39 +135,18 @@
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
-    <script>document.getElementById('togglemebutton').onclick = function () {
-        document.getElementById("resultnav").classList.toggle("hidden");
-      }
-
-      //document.getElementById('togglemebutton').onclick = function () {
-      //  document.getElementById("toggleme").classList.toggle("hidden");
-      //}
-
-
-      const toggleprofile = document.getElementById("toggleprofile");
-      const resultprofile = document.getElementById("resultprofile");
-      [...document.querySelectorAll('body')].forEach(el => {
-        el.addEventListener('click', event => {
-          if (event.target.parentElement.id !== "toggleprofile") {
-            console.log(event.target.parentElement.id)
-            resultprofile.classList.add("hidden")
-          } else {
-            resultprofile.classList.toggle("hidden")
-          }
-        })
-      })</script>
   </nav>
-  <header
+  <!-- <header
     class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
     <p
       class="rounded-md px-3 font-bold  bg-black dark:bg-white text-white uppercase hover:underline cursor-pointer dark:text-black">
       ALL</p>
     <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
     <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-  </header>
+  </header> -->
   <div class="bg-transparent w-screen dark:bg-background">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
-      <h2 id="sectionHeading" class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"></h2>
+      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">Series you follow</h2>
 
       <div id="recentlyPub"
         class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
@@ -189,17 +168,12 @@
       </div>
     </div>
 
-    <script>
-      let genre = window.location.pathname.split('/').pop();
-      document.getElementById('sectionHeading').innerHTML = `${genre.toUpperCase()} series:`;
-    </script>
-
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
     <script src="/js/init.js" type="module"></script>
-    <script defer src="/js/genre.js" type="module"></script>
+    <script defer src="/js/library.js" type="module"></script>
 </body>
 
 </html>
